# ai-dial-adapter-openai

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .ort.yml  Dockerfile  MODEL_CARD.md  Makefile  README.md  SECURITY.md  app.py  build.sh  client.py  debug_app.py  install.sh  load_env.sh  local_client.py  local_client_http.py  local_client_vertex_ai.py  noxfile.py  openai_override.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh  test_app.py
.github/: CODEOWNERS
.github/workflows/: deploy_dev.yml  e2e_tests.yml  pr.yml  pr_check_tests.yml  release.yml
aidial_adapter_openai/: app.py  completions.py  constant.py  dalle3.py  databricks.py  env.py  errors.py  gpt.py  gpt4_vision.py  image_to_text.py  images.py  legacy_completions.py  mistral.py  openai_override.py  types.py
aidial_adapter_openai/dial_api/: resource.py  storage.py
aidial_adapter_openai/gpt4_code_interpreter/: application.py  assistants_api.py
aidial_adapter_openai/gpt4_multi_modal/: attachment.py  chat_completion.py  download.py  gpt4_vision.py  image_tokenizer.py  transformation.py  truncate.py
aidial_adapter_openai/gpt4_vision/: chat_completion.py  gpt4_conversion.py  image_tokenizer.py  messages.py  tokenization.py
aidial_adapter_openai/gpt_code_interpreter/: assistants_api.py  bing_search.py  chat_completion.py
aidial_adapter_openai/utils/: attachment_link.py  auth.py  data_url.py  deployment_classifier.py  env.py  errors.py  exceptions.py  globals.py  http_client.py  image.py  image_data_url.py  image_tokenizer.py  log_config.py  merge_chunks.py  message_content_part.py  multi_modal_message.py  parsers.py  prompt_truncate.py  reflection.py  remove_none.py  request_classifier.py  resource.py  sse_stream.py  storage.py  streaming.py  string_processor.py  text.py  tokenizer.py  tokens.py  truncate_prompt.py  version.py  versions.py
client/: client_adapter.py  client_bison_http.py  client_bison_sdk.py  client_chat_bison_http.py  client_chat_bison_sdk.py  client_code_chat_bison_sdk.py  client_dolly_sdk.py  client_llama2_http.py  client_llama2_sdk.py  client_vertexai.py  client_vertexai_http.py  deploy_dolly.py
helm/: development.yaml  openai-development.yaml  review.yaml
llm/: bison_chat.py  callback.py  chat_adapter.py  chat_completion_adapter.py  chat_model.py  chat_model_adapter.py  dolly2.py  embeddings_adapter.py  endpoint_chat_completion_adapter.py  endpoint_chat_model.py  exception.py  gecko_embeddings.py  llama2.py  vertex_ai.py  vertex_ai_adapter.py  vertex_ai_chat_model.py  vertex_ai_deployments.py  vertex_ai_models.py
open_ai/: response.py  types.py
scripts/: docker_entrypoint.sh
server/: exceptions.py
test/: conftest.py  run.sh  test_chat_completion.py  test_embeddins.py
test/locust/: app.py  run.sh
tests/: conftest.py  test_attachments.py  test_discard_messages.py  test_errors.py  test_image_tokenization.py  test_multimodal_transformation.py  test_multimodal_truncate.py  test_parsers.py  test_request_classifier.py  test_streaming.py  test_versions.py
tests/utils/: dictionary.py  images.py  storage.py  stream.py
universal_api/: request.py  response.py  token_usage.py
utils/: args.py  cli.py  concurrency.py  env.py  init.py  input.py  json.py  list.py  log_config.py  operators.py  perf.py  printing.py  server.py  text.py  token_counter.py
