[tool.poetry]
name = "aidial-adapter-openai"
version = "0.15.0rc"
description = "DIAL adapter for OpenAI"
authors = ["EPAM RAIL <SpecialEPM-DIALDevTeam@epam.com>"]
homepage = "https://epam-rail.com"
documentation = "https://epam-rail.com/dial_api"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ai"]
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]
repository = "https://github.com/epam/ai-dial-adapter-openai"

[tool.poetry.scripts]
clean = "scripts.clean:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.115.2"
openai = "1.33.0"
tiktoken = "0.7.0"
uvicorn = "0.23"
wrapt = "^1.15.0"
pydantic = "^1.10.12"
# required by openai embeddings; avoiding openai[datalib],
# since it also depends on pandas
numpy = "^1.26.0"
pillow = "^10.3.0"
azure-identity = "^1.16.1"
aidial-sdk = {version = "^0.13.0", extras = ["telemetry"]}

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
pytest-asyncio = "0.21.1"
respx = "^0.21.1"

[tool.poetry.group.lint.dependencies]
pyright = "1.1.324"
black = "24.3.0"
isort = "5.12.0"
autoflake = "2.2.0"
flake8 = "6.0.0"

[tool.poetry.group.dev.dependencies]
nox = "^2023.4.22"

[tool.pytest.ini_options]
# muting warnings coming from opentelemetry and pkg_resources packages
filterwarnings = [
    "ignore::DeprecationWarning:opentelemetry.instrumentation.dependencies",
    "ignore::DeprecationWarning:pkg_resources"
]

[tool.pyright]
typeCheckingMode = "basic"
reportUnusedVariable = "error"
reportIncompatibleMethodOverride = "error"
exclude = [
    ".git",
    ".venv",
    ".nox",
    "**/__pycache__"
]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
  | \.nox
  | \.__pycache__
)/
'''

[tool.isort]
line_length = 80
profile = "black"

[tool.autoflake]
ignore_init_module_imports = true
remove_all_unused_imports = true
in_place = true
recursive = true
quiet = true
exclude = [
    "\\.venv",
    "\\.nox",
]
